--- a/runbook.html
+++ b/runbook.html
@@ -2,8 +2,8 @@
 Your Run Book
 </h1>
 <h2>
-Step 1:   Reboot
-Step 2:   Plug it in
-Step 3:   Pray
+<p>Step 1:   Reboot
+<p>Step 2:   Plug it in
+<p>Step 3:   Pray
 </h2>
 </center>
