--- a/runbook.html
+++ b/runbook.html
@@ -2,8 +2,8 @@
 Your Run Book
 </h1>
 <h2>
-<p>Step 1:   Reboot
-<p>Step 2:   Plug it in
-<p>Step 3:   Pray
+  <p>Step 1:   Reboot</p>
+  <p>Step 2:   Plug it in</p>
+  <p>Step 3:   Pray<p>
 </h2>
 </center>
