--- a/conference.html
+++ b/conference.html
@@ -2,9 +2,9 @@
 Your Run Book
 </h1>
 <h2>
-  <p>US: <href>+16465588656,,9826291852#</href></p>
-  <p>UK: <href>0 800 031 5717</href></p>
-  <p>Australia: <href>1800 893 423</href><p>
+  <p>US: <Link href="+16465588656,,9826291852#"</href></p>
+  <p>UK: <Link href="0 800 031 5717"</href></p>
+  <p>Australia: <Link href="1800 893 423"</href><p>
 </h2>
 </center>
 <h4>
@@ -49,3 +49,4 @@ Join by H.323
 207.226.132.110 (Japan)
 202.177.207.158
 Meeting ID: 982 629 1852
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
