--- a/conference.html
+++ b/conference.html
@@ -1,10 +1,10 @@
 <h1><Center>
-Your Run Book
+Conference Bridge Numbers
 </h1>
 <h2>
-  <p>US: <Link href="+16465588656,,9826291852#"</href></p>
-  <p>UK: <Link href="0 800 031 5717"</href></p>
-  <p>Australia: <Link href="1800 893 423"</href><p>
+  <Link href="+16465588656,,9826291852#"/a>
+  <Link href="0 800 031 5717"/a>
+  <Link href="1800 893 423"/a>
 </h2>
 </center>
 <h4>
