--- a/conference.html
+++ b/conference.html
@@ -2,9 +2,9 @@
 Conference Bridge Numbers
 </h1>
 <h2>
-  <Link href="+16465588656,,9826291852#"/a>
-  <Link href="0 800 031 5717"/a>
-  <Link href="1800 893 423"/a>
+  <a href="+16465588656,,9826291852#">US dialin/a>
+  <a href="0 800 031 5717">UK dialin/a>
+  <a href="1800 893 423">Asia dialin/a>
 </h2>
 </center>
 <h4>
