--- a/conference.html
+++ b/conference.html
@@ -10,43 +10,41 @@ MarketAxess Conference Bridge Numbers
 <h4>
 <p>Details:
 <p>
-https://pagerduty.zoom.us/j/9826291852
+<p>https://pagerduty.zoom.us/j/9826291852<p>
 
-One tap mobile
- US (New York)
-+16699006833,,9826291852# US (San Jose)
-
-Dial by your location
-        +1 646 558 8656 US (New York)
-        +1 669 900 6833 US (San Jose)
-        877 369 0926 US Toll-free
-        877 853 5247 US Toll-free
-        +61 2 8015 2088 Australia
-        +61 8 7150 1149 Australia
-         Australia Toll-free
-        +1 647 558 0588 Canada
-        855 703 8985 Canada Toll-free
-        +44 203 966 3809 United Kingdom
-        +44 203 051 2874 United Kingdom
-        +44 203 695 0088 United Kingdom
-         United Kingdom Toll-free
-Meeting ID: 982 629 1852
-Find your local number: https://zoom.us/u/a8qUE80n7
-
-Join by SIP
-9826291852@zoomcrc.com
-
-Join by H.323
-162.255.37.11 (US West)
-162.255.36.11 (US East)
-221.122.88.195 (China)
-115.114.131.7 (India)
-213.19.144.110 (EMEA)
-103.122.166.55 (Australia)
-209.9.211.110 (Hong Kong)
-64.211.144.160 (Brazil)
-69.174.57.160 (Canada)
-207.226.132.110 (Japan)
-202.177.207.158
-Meeting ID: 982 629 1852
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+<p>+16699006833,,9826291852# US (San Jose)
+<p>
+<p>Dial by your location
+<p>        +1 646 558 8656 US (New York)
+<p>        +1 669 900 6833 US (San Jose)
+<p>        877 369 0926 US Toll-free
+<p>        877 853 5247 US Toll-free<p>
+<p>        +61 2 8015 2088 Australia
+<p>        +61 8 7150 1149 Australia
+<p>         Australia Toll-free
+<p>     +1 647 558 0588 Canada
+<p>        855 703 8985 Canada Toll-free
+<p>        +44 203 966 3809 United Kingdom
+<p>        +44 203 051 2874 United Kingdom
+<p>        +44 203 695 0088 United Kingdom
+<p>         United Kingdom Toll-free
+<p>Meeting ID: 982 629 1852
+<p>Find your local number: https://zoom.us/u/a8qUE80n7
+<p>
+<p>Join by SIP
+<p>9826291852@zoomcrc.com
+<p>
+<p>Join by H.323
+<p>162.255.37.11 (US West)
+<p>162.255.36.11 (US East)
+<p>221.122.88.195 (China)
+<p>115.114.131.7 (India)
+<p>213.19.144.110 (EMEA)
+<p>103.122.166.55 (Australia)
+<p>209.9.211.110 (Hong Kong)
+<p>64.211.144.160 (Brazil)
+<p>69.174.57.160 (Canada)
+<p>207.226.132.110 (Japan)
+<p>202.177.207.158
+<p>Meeting ID: 982 629 1852
+<p>  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
