--- a/conference.html
+++ b/conference.html
@@ -2,9 +2,9 @@
 MarketAxess Conference Bridge Numbers
 </h1>
 <h2>
-  <p><a href="+16465588656,,9826291852#">US dialin</a>
-  <p><a href="0 800 031 5717">UK dialin</a>
-  <p><a href="1800 893 423">Asia dialin</a>
+  <p><a href="https://pagerduty.zoom.us/j/9826291852">US dialin</a>
+  <p><a href="https://pagerduty.zoom.us/j/9826291852">UK dialin</a>
+  <p><a href="https://pagerduty.zoom.us/j/9826291852">Asia dialin</a>
 </h2>
 </center>
 <h4>
