--- a/runbook.html
+++ b/runbook.html
@@ -1,9 +1,9 @@
 <h1><Center>
-Your Run Book
+Manual plan to reboot reactor
 </h1>
 <h2>
-  <p>Step 1:   Plug it in!</p>
-  <p>Step 2:   Reboot</p>
-  <p>Step 3:   Pray<p>
+  <p><center>Step 1:   Plug it in!</p>
+  <p><center>Step 2:   Reboot</p>
+  <p><center>Step 3:   Pray<p>
 </h2>
 </center>
