--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 
 	<body>
 		<div id="content" class="container-fluid">
+		<div class="row"><p></p></div>
+			<div class="row">
+				<div class="col-md-12">
+					Demo: <select class="selectpicker" id="station-select"></select>
+				</div>
+			</div>
+
 			<div class="row"><p></p></div>
 			<div class="row">
 				<div class="col-md-12">
