--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	    <meta charset="utf-8">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>PagerDuty AWS Demo</title>
+		<title>PagerDuty Demo</title>
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 		<link href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/css/bootstrap-select.min.css" rel="stylesheet">
@@ -15,7 +15,7 @@
 			<div class="row"><p></p></div>
 			<div class="row">
 				<div class="col-md-12">
-					Demo Station: <select class="selectpicker" id="station-select"></select>
+					Demo Selection: <select class="selectpicker" id="station-select"></select>
 				</div>
 			</div>
 			<div class="row"><p></p></div>
